# dl-mbl-gut

./: .gitignore  README.md  pyproject.toml
notebooks/: .gitignore  20240829_measurereceptivefield.ipynb  20240829_modelconfig.ipynb
scripts/: 2d-sdt-train.py  2d-train-new-annotate.py  2d-train-scalenet.py  2d-train.py  3d-inference.py  3d-train.py  3d-train_asym.py  3d-train_asym_zfs.py  calculate_HD.py  downsample.py  evaluation.py  fill-normalization-metadata.py  inference-metrics.py  inference_avl.py  model.py  napari_predictions.py  napari_save_vid.py  plot_HD_avl.py  plot_HD_avl_05.py  plot_tvt_avl.py  plot_tvt_avl_05.py  plot_tvt_avlnew.py  rechunk.py  train-val-test-split.py  train.py
src/dl_mbl_gut/: conv4d.py  dataloader.py  dataloader_avl.py  evaluation.py  inference.py  metrics.py  model_asym.py  scalenet.py  train.py  utils.py
src/dl_mbl_gut.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
