[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "dl-mbl-gut"
description = "package description."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "talonchandler@gmail.com ", name = "Talon Chandler " },
]
dynamic = ["version"]
dependencies = [
    torch
    torchvision
    numpy
    matplotlib
    PIL
    os
]