[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "dl-mbl-gut"
description = "Segment zebrafish guts for DL@MBL2024 course."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "talonchandler@gmail.com ", name = "Talon Chandler " },
]
dynamic = ["version"]
dependencies = [
    "tensorboard",
    "torch",
    "torchvision",
    "numpy==1.26.0",
    "matplotlib",
    "pillow",
    "iohub",
    "monai",
    "aicsimageio",
    "pandas"
]
